# kk2-atg

./: .gitignore  README.md  pyproject.toml  reflektion.md
app/: atg.py  main.py  schemas.py
app/api/: ai.py  data.py  health.py
app/chain/: __init__.py  pipeline.py  runnable.py  steps.py
app/db/: __init__.py  operations.py  schema.py
app/models/: models.py
app/services/: ai_service.py  data_service.py
app/static/: index.html
app/tests/: test_chain.py  test_endpoints.py
app/utils/: config.py
