[project]
name = "kk2-atg"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.3",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.30",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.50",
    "uvicorn[standard]>=0.48.0",
    "transformers>=4.45.0",
    "torch>=2.0.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
]
